--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "22.15.3",
-    "@types/react": "19.1.2",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.8.3"
+    "typescript": "^5.8.3"
   }
 }
