--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
     "inngest": "^3.35.1",
+    "lucide-react": "^0.511.0",
     "mongoose": "^8.14.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
