--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lucide-react": "^0.511.0",
     "mongoose": "^8.14.0",
     "next": "^15.2.3",
+    "papaparse": "^5.5.3",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1"
   },
