--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.5.0",
     "zod": "^3.25.17"
   },
   "devDependencies": {
