--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.5.0",
+    "resend": "^4.5.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.25.17"
   },
   "devDependencies": {
