--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.0",
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "inngest": "^3.35.1",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.14.0",
     "next": "^15.2.3",
+    "nodemailer": "^7.0.3",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-csv": "^2.2.2",
