--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
+    "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "inngest": "^3.35.1",
