--- a/package.json
+++ b/package.json
@@ -12,25 +12,47 @@
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.18.0",
     "@emailjs/browser": "^4.4.1",
+    "@paypal/react-paypal-js": "^8.8.3",
+    "@stripe/stripe-js": "^7.3.1",
+    "@tiptap/extension-blockquote": "^2.14.0",
+    "@tiptap/extension-bold": "^2.14.0",
+    "@tiptap/extension-document": "^2.14.0",
+    "@tiptap/extension-gapcursor": "^2.14.0",
+    "@tiptap/extension-italic": "^2.14.0",
+    "@tiptap/extension-paragraph": "^2.14.0",
+    "@tiptap/extension-text": "^2.14.0",
+    "@tiptap/extension-text-style": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
+    "formidable": "^3.5.4",
+    "fs": "^0.0.1-security",
     "inngest": "^3.35.1",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.14.0",
+    "multer": "^2.0.1",
     "next": "^15.2.3",
     "nodemailer": "^7.0.3",
     "papaparse": "^5.5.3",
+    "path": "^0.12.7",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.5.0",
+    "react-lucid": "^0.0.1",
+    "react-quill": "^2.0.0-beta.4",
     "resend": "^4.5.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "stripe": "^18.2.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.17"
   },
   "devDependencies": {
