--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^18.2.1",
+    "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0",
     "zod": "^3.25.17"
   },
