--- a/.env
+++ b/.env
@@ -30,3 +30,6 @@ EMAIL_PASS = "sjdppqhiynesbhbt"
 EMAIL_HOST = "smtp.mail.yahoo.com"
 EMAIL_PORT = "465"
 ADMIN_EMAIL = "cusceda@yahoo.com"
+
+
+IPINFO_TOKEN=cd10ba634a827a
