--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^8.14.0",
     "multer": "^2.0.1",
     "next": "^15.2.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "papaparse": "^5.5.3",
     "path": "^0.12.7",
