--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/starter-kit": "^2.14.0",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
@@ -49,9 +50,8 @@
     "react-icons": "^5.5.0",
     "react-lucid": "^0.0.1",
     "resend": "^4.5.1",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "stripe": "^18.2.1",
+    "tailwind-scrollbar": "^4.0.2",
     "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0",
     "zod": "^3.25.17"
