--- a/.env
+++ b/.env
@@ -33,3 +33,7 @@ ADMIN_EMAIL = "cusceda@yahoo.com"
 
 
 IPINFO_TOKEN=cd10ba634a827a
+
+
+#Shippo
+SHIPPO_API_KEY = shippo_test_caa2b56c2cca0646522d43012f8e76321c751f9d
