--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@tiptap/starter-kit": "^2.14.0",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
+    "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.4",
     "fs": "^0.0.1-security",
+    "i18n-iso-countries": "^7.14.0",
     "inngest": "^3.35.1",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.14.0",
@@ -54,6 +56,7 @@
     "tailwind-scrollbar": "^3.0.0",
     "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0",
+    "world-countries": "^5.1.0",
     "zod": "^3.25.17"
   },
   "devDependencies": {
