--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-gapcursor": "^2.14.0",
     "@tiptap/extension-italic": "^2.14.0",
     "@tiptap/extension-paragraph": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.22.3",
     "@tiptap/extension-text": "^2.14.0",
     "@tiptap/extension-text-style": "^2.14.0",
     "@tiptap/extension-underline": "^2.14.0",
@@ -40,6 +41,7 @@
     "mongoose": "^8.14.0",
     "multer": "^2.0.1",
     "next": "^15.2.3",
+    "node-cron": "^4.1.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "papaparse": "^5.5.3",
