--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.6",
     "fs": "^0.0.1-security",
     "i18n-iso-countries": "^7.14.0",
+    "i18next": "^25.3.2",
     "inngest": "^3.35.1",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.0",
     "multer": "^2.0.1",
     "next": "^15.2.3",
@@ -51,8 +54,10 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-lucid": "^0.0.1",
+    "recharts": "^3.1.0",
     "resend": "^4.5.1",
     "stripe": "^18.2.1",
     "tailwind-scrollbar": "^3.0.0",
