--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
+    "archiver": "^7.0.1",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.0",
     "country-state-city": "^3.2.1",
@@ -37,17 +38,18 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.6",
     "fs": "^0.0.1-security",
+    "googleapis": "^153.0.0",
     "i18n-iso-countries": "^7.14.0",
     "i18next": "^25.3.2",
     "inngest": "^3.35.1",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.14.0",
+    "mongoose": "^8.16.4",
     "multer": "^2.0.1",
     "next": "^15.2.3",
     "node-cron": "^4.1.1",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "^7.0.5",
     "papaparse": "^5.5.3",
     "path": "^0.12.7",
     "quill": "^2.0.3",
