--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ NEXT_PUBLIC_CURRENCY=₦
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29tbXVuYWwtZHVjay02LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_ReFRxHZMTu3DZ7PNvF3a4oU5269c4mUjCoMXxAS3cl
 ADMIN_DELETE_PASSWORD=TOMIlayo180521
+ADMIN_DB_CLEAR_PASSWORD = 1234Tomi1234Tomi43214321
+ADMIN_BACKUP_PASSWORD = 1234
 
 # MONGODB_URI='mongodb+srv://oluwatomilayoolajide2023:oluwatomilayoolajide2023@cluster0.6znqw3h.mongodb.net'
 MONGODB_URI='mongodb+srv://cusceda:cusceda123@cluster0.a8bcz3n.mongodb.net'
@@ -37,6 +39,7 @@ EMAIL_PASS = "sjdppqhiynesbhbt"
 EMAIL_HOST = "smtp.mail.yahoo.com"
 EMAIL_PORT = "465"
 ADMIN_EMAIL = "cusceda@yahoo.com"
+
 
 
 IPINFO_TOKEN=cd10ba634a827a
