--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "i18n-iso-countries": "^7.14.0",
     "i18next": "^25.3.2",
     "inngest": "^3.35.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "mongoose": "^8.16.4",
     "multer": "^2.0.1",
     "next": "^15.4.3",
+    "next-i18next": "^15.4.2",
     "node-cron": "^4.1.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
@@ -61,7 +63,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
-    "react-i18next": "^15.6.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-lucid": "^0.0.1",
     "recharts": "^3.1.0",
