--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.4",
-    "framer-motion": "^12.23.6",
+    "framer-motion": "^12.23.12",
     "fs": "^0.0.1-security",
     "googleapis": "^153.0.0",
     "i18n-iso-countries": "^7.14.0",
@@ -66,6 +66,7 @@
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-lucid": "^0.0.1",
+    "react-quill": "^1.3.5",
     "recharts": "^3.1.0",
     "resend": "^4.5.1",
     "stripe": "^18.2.1",
