--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@aws-sdk/client-s3": "^3.850.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/nextjs": "^6.18.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emailjs/browser": "^4.4.1",
+    "@formkit/auto-animate": "^0.8.2",
     "@google-cloud/storage": "^7.16.0",
     "@headlessui/react": "^2.2.4",
     "@paypal/react-paypal-js": "^8.8.3",
