--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ ADMIN_DB_CLEAR_PASSWORD = 1234Tomi1234Tomi43214321
 ADMIN_BACKUP_PASSWORD = 1234
 RESTORE_PASSWORD = 1234
 SUPER_ADMIN_PASSWORD = 1234
+NEXT_PUBLIC_LOGOUT_PASSWORD = 1234
+NEXT_PUBLIC_PRODUCT_PASSWORD = 1234
 
 # MONGODB_URI='mongodb+srv://oluwatomilayoolajide2023:oluwatomilayoolajide2023@cluster0.6znqw3h.mongodb.net'
 MONGODB_URI='mongodb+srv://cusceda:cusceda123@cluster0.a8bcz3n.mongodb.net'
