--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@google-cloud/storage": "^7.16.0",
     "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@paypal/react-paypal-js": "^8.8.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@stripe/stripe-js": "^7.3.1",
