--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "resend": "^4.5.1",
     "stripe": "^18.2.1",
     "svix": "^1.74.1",
+    "swiper": "^11.2.10",
     "tailwind-scrollbar": "^3.0.0",
     "ua-parser-js": "^2.0.3",
     "unzipper": "^0.12.3",
