--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "axios": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "cloudinary": "^2.6.0",
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
