--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.4",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.24",
     "fs": "^0.0.1-security",
     "googleapis": "^153.0.0",
     "i18n-iso-countries": "^7.14.0",
@@ -76,6 +76,7 @@
     "react-hot-toast": "^2.5.1",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-lucid": "^0.0.1",
     "recharts": "^3.1.0",
     "resend": "^4.5.1",
